# CMakeGitHubPractice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  wget-log
include/: CMakeLists.txt  header.cpp  header.h  test.h
lib/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  main.cpp
